<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>bookingcar</artifactId>
        <groupId>bco</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>

    <artifactId>bookingcar-domain</artifactId>

    <properties>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>plantuml-generator-maven-plugin</artifactId>
                <groupId>de.elnarion.maven</groupId>
                <version>1.1.2</version>
                <executions>
                    <execution>
                        <id>generate-simple-diagram</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <phase>generate-test-sources</phase>
                        <configuration>
                            <outputDirectory>${basedir}/docs</outputDirectory>
                            <outputFilename>domain.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>
                                    bco.bookingcar.domain
                                </scanPackage>
                            </scanPackages>
                            <hideMethods>true</hideMethods>
                            <blacklistRegexp>(.*InMemory.*|.*Builder)</blacklistRegexp>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>bco</groupId>
            <artifactId>bookingcar-common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>bco</groupId>
            <artifactId>bookingcar-common</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>
    </dependencies>
</project>